# ChessEngine

./: AlphaBeta.cpp  CMakeLists (2).txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  arm-toolchain.cmake
Bitboards/: BitBoards.cpp  Bitboards.h  Magic.cpp  Magic.h
board/: TranspositionTable.h
evaluation/: Evaluator.cpp  Evaluator.h
gui/: CMakeLists.txt  GUI.h  main.cpp
include/: Board.h  CMakeLists.txt  Evaluator.h  MoveGenerator.h  Search.h
include/ChessEngine/: CMakeLists.txt
include/ChessEngine/core/: Zobrist.h
include/MoveGenerator/: CMakeLists.txt  MoveGenerator.h
include/UCI/: CMakeLists.txt
include/core/: Move.hpp  Piece.hpp
src/: AlphaBeta.cpp  Board.cpp  CMakeLists.txt  ChessBoard.cpp  main.cpp
src/Board/: Board.cpp  Board.h  Move.h
src/ChessEngine/MoveGenerator/: MoveGenerator.cpp
src/ChessEngine/core/: Evaluator.cpp  Search.cpp
src/MoveGenerator/: MoveGenerator.cpp
src/Utils/: BitboardUtils.cpp  BitboardUtils.hpp  Move.h  Zobrist.h
src/core/: Board.cpp  CMakeLists.txt  ChessBoard.cpp  Move.cpp
src/core/board/: TranspositionTable.h
src/core/evaluation/: Evaluator.cpp
src/core/search/: Search.cpp
src/core/tests/: UnitTests.cpp
src/movegen/: MoveGenerator.cpp  MoveGenerator.h
src/search/: Search.cpp  Search.h  search.h
src/tests/: CMakeLists.txt  MoveGeneratorTests.cpp
src/uci/: UCIHandler.cpp
tests/: BoardTests.cpp  CMakeLists.txt  ChessBoard.cpp  TranspositionTable.h
